test/core/errors/offsets_error/zs/varuint_error.zs
package varuint_error;

struct VaruintError
{
    varuint offset;
offset:
    uint32 values[];
};
